# lightning-template-hydra

./: .cursorignore  .dockerignore  .flake8  .gitignore  Dockerfile  POETRY.md  README.md  data.dvc  docker-compose-adv.yaml  docker-compose.yaml  dvc.yaml  hello.py  notes.md  pyproject.toml  pytest.ini  requirements.txt
.dvc/: config
.github/worflows/: ci.yml
.github/workflows/: ci.yml  cml.yml
configs/: eval.yaml  infer.yaml  train.yaml
configs/callbacks/: default.yaml  model_checkpoint.yaml
configs/data/: catdog.yaml  dogbreed.yaml
configs/experiment/: catdog_ex.yaml  catdog_experiment.yaml  dogbreed_experiment.yaml
configs/model/: catdog_classifier.yaml  dogbreed_classifier.yaml  vit_tiny.yaml
configs/paths/: catdog.yaml  catdogs.yaml  default.yaml  dogbreed.yaml
configs/trainer/: default.yaml
notebooks/: hydra_tutorial1.py  hydra_tutorial10.py  hydra_tutorial11.py  hydra_tutorial2.py  hydra_tutorial3.py  hydra_tutorial4.py  hydra_tutorial5.py  hydra_tutorial6.py  hydra_tutorial7.py  hydra_tutorial8.py  hydra_tutorial9.py  models.py  test.ipynb
notebooks/configs/: config.yaml  config3.yaml  config4.yaml  config5.yaml  config6.yaml  config7.yaml  config8.yaml
pytorch_project/: .flake8  pyproject.toml
src/: config.yaml  eval.py  hydra_test.py  infer.py  settings.py  train.py
src/datamodules/: catdog.py  catdog_datamodule.py  dogbreed_datamodule.py
src/models/: catdog_classifier.py  dogbreed_classifier.py  timm_classifier.py
src/utils/: logging_utils.py  (+1 more)
tests/: conftest.py  test_catdog_datamodule.py  test_timm_classifier.py  test_train.py
(+10 files in other folders)
