[tool.poetry]
name = "pytorch_project"
version = "0.1.0"
description = "structured code for execution of pytorch project on lightning with production grade setup"
authors = ["soutrik71 <soutrik.chowdhury@ab-inbev.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.14"
black = "24.8.0"
coverage = ">=7.6.1"
hydra-colorlog = "1.2.0"
hydra-core = "1.3.2"
lightning = {version = "2.4.0", extras = ["extra"]}
loguru = "0.7.2"
pytest = "8.3.3"
rich = "13.8.1"
rootutils = "1.0.7"
tensorboard = "2.17.1"
timm = "1.0.9"
pandas = "^2.1.1"
numpy = "^1.26.0"
ruff = "^0.1.0"  # Ruff is a linter and can be added here as a dev tool
torch = {version = "^2.4.1+cpu", source = "pytorch_cpu"}
torchvision = {version = "^0.19.1+cpu", source = "pytorch_cpu"}
seaborn = "^0.13.2"
pydantic = "^2.9.2"
kaggle = "^1.6.17"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"
flake8 = "^7.1.1"
dvc = "^3.55.2"
dvc-gdrive = "^3.0.1"

[[tool.poetry.source]]
name = "pytorch_cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
